Added max treads UI field